primitives/api/test/tests/ui/impl_incorrect_method_signature.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/impl_incorrect_method_signature.rs:19:17
   |
19 |         fn test(data: String) {}
   |                       ^^^^^^
   |                       |
   |                       expected `u64`, found struct `std::string::String`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/impl_incorrect_method_signature.rs:13:17
   |
13 |         fn test(data: u64);
   |                       ^^^
   = note: expected fn pointer `fn(u64)`
              found fn pointer `fn(std::string::String)`

error[E0308]: mismatched types
  --> tests/ui/impl_incorrect_method_signature.rs:19:11
   |
19 |         fn test(data: String) {}
   |                 ^^^^ expected `u64`, found struct `std::string::String`
